# rpm-blender-deform-test

./: README.md  pyproject.toml  requirements.txt
deform_test/: __init__.py  ui.py
