[build-system]
requires = ["setuptools", "setuptools-scm"]
#build-backend = "setuptools.build_meta"


[tool.setuptools]
packages = ["deform_test"]


[project]
name = "deform-test"
authors = [
    {name = "Daniel RPM"},
]
description = "deformation tester to help artists with skinning"
readme = "README.md"
requires-python = ">=3.4"
keywords = ["animation", "blender", "deformation"]
#license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3.7",
]
#dynamic = ["dependencies"]
dependencies = ['importlib-metadata; python_version<"3.7"', "ready_player_me @ git+https://github.com/readyplayerme/ready-player-me", "Qt.py", "PySide2"]
#dynamic = ["version"]
version = "0.0.1"

#[project.optional-dependencies]
#yaml = ["pyyaml"]

#[project.scripts]
#my-script = "my_package.module:function"

[project.urls]
Homepage = "https://github.com/readyplayerme"
Source = "https://github.com/readyplayerme"
